Closed
Bug 363054
Opened 19 years ago
Closed 19 years ago
Ctrl-Shift Keyboard Shortcuts (multiple modifier keys) broken (linux)
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: moz, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: regression, relnote, verified1.8.1.1, Whiteboard: possible ride-along)
Attachments
(1 file)
1.78 KB,
patch
|
zeniko
:
review+
pavlov
:
superreview+
mtschrep
:
approval1.8.1.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.1) Gecko/20061205 SeaMonkey/1.1 Mnenhy/0.7.4.10004
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.1) Gecko/20061205 SeaMonkey/1.1 Mnenhy/0.7.4.10004
In recent Seamonkey 1.1 builds the ctrl-shift-M Keyboard Shortcut isn't interpreted correctly, instead of mark folder read it acts exactly like ctrl-m without shift-key and starts a new message.
Reproducible: Always
Steps to Reproduce:
1.Press Ctrl-Shift-m on a folder in MailNews
2.
3.
Actual Results:
New message is started
Expected Results:
All Messages in the Folder should be marked as read.
For Linux this Shortcut was changed from ctrl-Shift-c some time ago due to <https://bugzilla.mozilla.org/show_bug.cgi?id=186789>
I'm lacking the intermediate builds and can only tell that it still worked with <Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.1pre) Gecko/20061126>
SeaMonkey/1.1b> and ceased to do so with <Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.1) Gecko/20061205 SeaMonkey/1.1>
Reporter | ||
Comment 1•19 years ago
|
||
This is not only an issue with this single Shortcut. Ctrl-Shift-I (Dom-Inspector) is broken as well. Similar problem, Ctrl-Shift-I opens page info, just like Ctrl-I does.
Component: MailNews: Main Mail Window → XP Apps: GUI Features
Summary: Ctrl-Shift-M for mark folder read on Linux doesn't work → Ctrl-Shift Keyboard Shortcuts broken
Version: unspecified → 1.8 Branch
Comment 2•19 years ago
|
||
Regression from bug 351310? Does this affect the latest Firefox 1.8.1.1 nightlies as well?
Keywords: regression
Assignee | ||
Comment 3•19 years ago
|
||
Yes, I'm afraid this is broken on Linux, mea culpa.
Mozilla/5.0 (X11; U; Linux i686 (x86_64); en-US; rv:1.8.1.1) Gecko/20061206 BonEcho/2.0.0.1
SeaMonkey trunk on Linux does not seem to be affected though.
How about Firefox 2.0.0.1 on Windows?
Assignee: mail → mats.palmgren
Severity: normal → major
Assignee | ||
Updated•19 years ago
|
Assignee: mats.palmgren → nobody
Status: UNCONFIRMED → NEW
Component: XP Apps: GUI Features → Keyboard: Navigation
Ever confirmed: true
Product: Mozilla Application Suite → Core
QA Contact: keyboard.navigation
Assignee | ||
Comment 4•19 years ago
|
||
A quick fix to make this work again. We can figure out something later
that takes into account non-default key/mask settings in prefs.js if we
need to...
Attachment #247849 -
Flags: superreview?(pavlov)
Attachment #247849 -
Flags: review?(zeniko)
Comment 5•19 years ago
|
||
Have you considered excluding 'A' to 'Z' from being unshifted instead? Seems that opposite to Windows, the DOM-keyCode's being uppercase is relevant at a later point. That would be the less hacky solution...
(In reply to comment #3)
> How about Firefox 2.0.0.1 on Windows?
Works as expected: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.1pre) Gecko/2006120403 BonEcho/2.0.0.1pre
Assignee | ||
Comment 6•19 years ago
|
||
It works fine on trunk, even though the widget code is exactly the same:
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/widget/src/gtk2/nsWindow.cpp&rev=1.193&root=/cvsroot&mark=2105-2140#2099
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/widget/src/gtk2/nsWindow.cpp&rev=MOZILLA_1_8_BRANCH&root=/cvsroot&mark=1845-1880#1839
so there must be some difference in how keyboard shortcuts are processed
elsewhere...
Assignee | ||
Comment 7•19 years ago
|
||
(In reply to comment #5)
> Have you considered excluding 'A' to 'Z' from being unshifted instead? Seems
> that opposite to Windows, the DOM-keyCode's being uppercase is relevant at a
> later point. That would be the less hacky solution...
It's rather late in the game, I prefer the "don't do this at all if
Control is pressed"-solution for now.
Comment 8•19 years ago
|
||
Comment on attachment 247849 [details] [diff] [review]
Patch rev. 1
(In reply to comment #7)
In that case, fine by me.
Attachment #247849 -
Flags: review?(zeniko) → review+
Updated•19 years ago
|
Flags: blocking1.8.1.2?
Assignee | ||
Updated•19 years ago
|
Assignee: nobody → mats.palmgren
Comment 9•19 years ago
|
||
We already have builds in testing for 1.8.1.1 on a tight schedule, we'll have to relnote this. In the unlikely event a critical bug forces a respin we can consider taking this as a ride-along.
Updated•19 years ago
|
Attachment #247849 -
Flags: superreview?(pavlov) → superreview+
Comment 10•19 years ago
|
||
Comment on attachment 247849 [details] [diff] [review]
Patch rev. 1
a=schrep for 1.5.0.9/2.0.0.1 based on convos on IRC
Attachment #247849 -
Flags: approval1.8.1.1+
Attachment #247849 -
Flags: approval1.8.0.9+
Comment on attachment 247849 [details] [diff] [review]
Patch rev. 1
This patch doesn't apply on 1.8.0.9. Is the fix needed there?
Attachment #247849 -
Flags: approval1.8.0.9+
dveditz says this is 1.8.1 only.
Leaving open for trunk landed in case that's needed.
Keywords: fixed1.8.1.1
Assignee | ||
Comment 13•19 years ago
|
||
Landed on trunk to keep the code in sync with 1.8 branch. The bug did not
occur on trunk but since we don't know why it didn't, it seems safer to
have the patch there too, until we know for sure...
-> FIXED
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 14•19 years ago
|
||
*** Bug 363131 has been marked as a duplicate of this bug. ***
Comment 15•19 years ago
|
||
verified fixed for 1.8.1.1 on Fedora FC 6 Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.1) Gecko/20061208 Firefox/2.0.0.1
Status: RESOLVED → VERIFIED
Keywords: fixed1.8.1.1 → verified1.8.1.1
Comment 16•19 years ago
|
||
*** Bug 364206 has been marked as a duplicate of this bug. ***
Updated•19 years ago
|
Summary: Ctrl-Shift Keyboard Shortcuts broken (linux) → Ctrl-Shift Keyboard Shortcuts (multiple modifier keys) broken (linux)
Updated•19 years ago
|
Flags: blocking1.8.1.2?
Flags: blocking1.8.1.1?
Updated•6 years ago
|
Component: Keyboard: Navigation → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•