Syncing with branch fix for bug 363054: Ctrl-Shift Keyboard Shortcuts broken (linux). r=zeniko sr=pavlov